# rustbucket

./: .gitignore  Cargo.toml  Cargo.toml~  Dockerfile  LICENSE  README.md  awoo.toml  awoo.yaml  cloudbuild.yaml
.circleci/: config.yaml  config.yml
migrations/2020-02-13-024727_create_brain/: down.sql  up.sql
src/: brain.rs  factoid.rs  factoid.rs~  main.rs  models.rs  schema.rs
src/brain/: hippocampus.rs  responder.rs  util.rs
src/factoid/: responder.rs  util.rs
