[package]
name = "rustbucket"
version = "0.0.1"
authors = ["BlueSpaceCanary"]
edition = "2018"

[dependencies]
diesel = "*"
dotenv = "*"
env_logger = "*"
failure = "*"
futures = "*"
irc = "0.14"
log = "*"
metrics = "*"
metrics-runtime = "*"
rand = ""
rand_core = ""
rand_xorshift = ""
governor = "0.3"
nonzero_ext = "*"
tokio = "*"
# certs &c
openssl-probe = "0.1"