[package]
name = "rustbucket"
version = "0.0.1"
authors = ["BlueSpaceCanary"]
edition = "2018"

[dependencies]
diesel = "*"
dotenv = "*"
env_logger = "*"
anyhow = "1"
futures = "*"
irc = "0.14"
log = "*"
rand = "*"
rand_core = "*"
rand_xorshift = "*"
governor = "0.4"
nonzero_ext = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# certs &c
openssl-probe = "0.1"